addressed a subtle alignment issue in the footer

--- a/style/image.css
+++ b/style/image.css
@@ -3,9 +3,9 @@ img.symbol {
     display: inline-block;
     margin: 0;
     padding: 0;
-    width: 1em;
-    height: 1em;
-    vertical-align: text-top;
+    width: 1.1em;
+    height: 1.1em;
+    vertical-align: text-bottom;
 }
 
 /**
